# spam_ham

./: .gitignore  README.md  check_spam.py  pyproject.toml  requirements.txt  spam_ham.code-workspace  spam_ham.ipynb
