[tool.poetry]
name = "spam_ham"
version = "0.1.0"
description = ""
authors = ["Chehan Ratnasiri <chehan.rat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.19.2"
pandas = "^1.1.3"
sklearn = "^0.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
bs4 = "^0.0.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
